--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.5"
 services:
   nginx:
     container_name: nginx
-    build: ./requirements/nginx/.
+    build: ./services/nginx/.
     ports:
      - "443:443"
      - "80:80"
