--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -8,5 +8,10 @@ services:
      - "443:443"
      - "80:80"
     restart: always
-    
+  mariadb:
+    container_name: mariadb
+    build: ./services/mariadb/.
+    restart: always
+    env_file:
+      - .env
 
