--- a/srcs/services/mariadb/Dockerfile
+++ b/srcs/services/mariadb/Dockerfile
@@ -5,4 +5,5 @@ RUN apt update -y
 RUN apt install  mariadb-server -y
 COPY ./default /etc/mysql/mariadb.conf.d/
 COPY ./script.sh /
-ENTRYPOINT ["bash", "script.sh"]
+RUN chmod +x script.sh
+ENTRYPOINT ["./script.sh"]
