--- a/srcs/services/mariadb/Dockerfile
+++ b/srcs/services/mariadb/Dockerfile
@@ -3,7 +3,7 @@ FROM debian:latest
 
 RUN apt update -y
 RUN apt install  mariadb-server -y
-COPY ./default /etc/mysql/mariadb.conf.d/
+COPY ./default /etc/mysql/my.cnf
 COPY ./script.sh /
 RUN chmod +x script.sh
 ENTRYPOINT ["./script.sh"]
