--- a/srcs/.env
+++ b/srcs/.env
@@ -2,3 +2,7 @@ DB_NAME=rachid
 USERNAME=ramhouch
 USER_PASS=rachid
 ROOT_PASS=root
+WORDPRESS_ADMIN=ramhouch
+WORDPRESS_PASS=ramhouch
+WORDPRESS_EMAIL=rachid.amhouch@gmail.com
+WORDPRESS_TITLE=ramhouch
