--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.5"
 services:
   nginx:
     container_name: nginx
-    build: ./services/nginx/.
+    build: ./requirements/nginx/.
     depends_on:
       - wordpress
     ports:
@@ -16,7 +16,7 @@ services:
       - inception
   mariadb:
     container_name: mariadb
-    build: ./services/mariadb/.
+    build: ./requirements/mariadb/.
     restart: always
     env_file:
       - .env
@@ -26,7 +26,7 @@ services:
       - inception
   wordpress:
     container_name: wordpress
-    build: ./services/wordpress/.
+    build: ./requirements/wordpress/.
     restart: always
     depends_on:
       - mariadb
