--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,10 +1,16 @@
 FROM debian:latest
 
+RUN apt update -y && apt install php-fpm php-mysql wget -y
 
-COPY ./script.sh /
+COPY ./tools/script.sh /
+
 RUN chmod +x script.sh
+
 RUN ./script.sh
-COPY ./run.sh /
+
+COPY ./tools/run.sh /
+
 RUN chmod +x run.sh
+
 ENTRYPOINT ["bash", "run.sh"]
  
