--- a/srcs/.env
+++ b/srcs/.env
@@ -5,4 +5,4 @@ ROOT_PASS=root
 WORDPRESS_ADMIN=ramhouch
 WORDPRESS_PASS=ramhouch
 WORDPRESS_EMAIL=rachid.amhouch@gmail.com
-WORDPRESS_TITLE=ramhouch
+WORDPRESS_TITLE=Rachid Amhouch
