--- a/srcs/.env
+++ b/srcs/.env
@@ -6,3 +6,5 @@ WORDPRESS_ADMIN=ramhouch
 WORDPRESS_PASS=ramhouch
 WORDPRESS_EMAIL=rachid.amhouch@gmail.com
 WORDPRESS_TITLE=Rachid Amhouch
+FTPUSER=ramhouch
+FTPPASS=ramhouch
