--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -48,11 +48,13 @@ services:
       - wordpress:/var/www/html
     env_file:
       - .env
+    restart: always
   websites:
     container_name: websites
     build: ./requirements/bonus/websites/.
     ports:
       - "3000:3000"
+    restart: always
   cadvisor:
     container_name: cadvisor
     build: ./requirements/bonus/cadvisor/.
@@ -63,6 +65,17 @@ services:
       - /var/run:/var/run:rw
       - /sys:/sys:ro
       - /var/lib/docker:/var/lib/docker:ro
+    restart: always
+  adminer:
+    container_name: adminer
+    build: ./requirements/bonus/adminer/.
+    ports:
+      - "5000:5000"
+    env_file:
+      - .env
+    restart: always
+    networks:
+      - inception
 
 volumes:
   mariadb:
