--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -76,6 +76,14 @@ services:
     restart: always
     networks:
       - inception
+  redis:
+    container_name: redis
+    build: ./requirements/bonus/redis/.
+    env_file:
+      - .env
+    restart: always
+    networks:
+      - inception
 
 volumes:
   mariadb:
