--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -1,12 +1,11 @@
 FROM debian:stable
-RUN apt-get update && apt-get upgrade -y 
 
-# UDPATE & INSTALLATION
-RUN apt-get install -y iputils-ping vim vsftpd 
+RUN apt update && apt install -y iputils-ping vim vsftpd 
 
 COPY ./conf /etc/vsftpd.conf
 
 COPY ./tools/script.sh .
+
 RUN chmod +x script.sh
 
 ENTRYPOINT ["./script.sh" ] 
