--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:stable
 
-RUN apt update && apt install -y iputils-ping vim vsftpd 
+RUN apt update && apt install -y iputils-ping vsftpd && rm -rf /var/lib/apt/lists/*
 
 COPY ./conf /etc/vsftpd.conf
 
