--- a/srcs/requirements/bonus/redis/Dockerfile
+++ b/srcs/requirements/bonus/redis/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:stable
 
-RUN apt-get update && apt install -y redis-server
+RUN apt-get update && apt install -y redis-server && rm -rf /var/lib/apt/lists/*
 
 CMD ["redis-server"]
 
