--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:stable
 
 
-RUN apt update -y && apt install  mariadb-server -y
+RUN apt update -y && apt install mariadb-server -y && rm -rf /var/lib/apt/lists/*
 
 COPY ./conf /etc/mysql/my.cnf
 
