--- a/srcs/.env
+++ b/srcs/.env
@@ -2,6 +2,9 @@ DB_NAME=rachid
 USERNAME=ramhouch
 USER_PASS=rachid
 ROOT_PASS=root
+WORDPRESS_USER=user
+WORDPRESS_USER_PASS=ramhouch
+WORDPRESS_USER_EMAIL=rachidamhouch5@gmail.com
 WORDPRESS_ADMIN=ramhouch
 WORDPRESS_PASS=ramhouch
 WORDPRESS_EMAIL=rachid.amhouch@gmail.com
