--- a/srcs/requirements/bonus/adminer/Dockerfile
+++ b/srcs/requirements/bonus/adminer/Dockerfile
@@ -2,9 +2,7 @@ FROM debian:stable
 
 RUN apt-get update && apt install -y wget php php-mysql && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /var/www/html
-
 RUN wget https://www.adminer.org/latest.php -O index.php
 
-CMD ["php", "-S", "0.0.0.0:5000", "-t", "/var/www/html"]
+CMD ["php", "-S", "0.0.0.0:5000", "-t", "/"]
 
