--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,10 +4,8 @@ RUN apt update -y && apt install -y nginx openssl && rm -rf /var/lib/apt/lists/*
 
 COPY ./tools/script.sh /
 
-RUN chmod +x /script.sh
-
-RUN ./script.sh
+RUN chmod +x script.sh && ./script.sh && rm script.sh
 
 COPY ./conf /etc/nginx/conf.d/default.conf
 
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
+CMD ["nginx", "-g", "daemon off;"]
