--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:stable
 
-RUN apt update && apt install -y iputils-ping vsftpd && rm -rf /var/lib/apt/lists/*
+RUN apt update && apt install -y vsftpd && rm -rf /var/lib/apt/lists/*
 
 COPY ./conf /etc/vsftpd.conf
 
@@ -8,4 +8,4 @@ COPY ./tools/script.sh .
 
 RUN chmod +x script.sh
 
-ENTRYPOINT ["./script.sh" ] 
+CMD ["./script.sh" ] 
