--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -4,13 +4,11 @@ RUN apt update -y && apt install php-fpm php-mysql wget -y && rm -rf /var/lib/ap
 
 COPY ./tools/script.sh /
 
-RUN chmod +x script.sh
-
-RUN ./script.sh
+RUN chmod +x script.sh && ./script.sh && rm script.sh
 
 COPY ./tools/run.sh /
 
 RUN chmod +x run.sh
 
-ENTRYPOINT ["bash", "run.sh"]
+CMD ["./run.sh"]
  
