--- a/srcs/.env
+++ b/srcs/.env
@@ -10,4 +10,4 @@ WORDPRESS_PASS=ramhouch
 WORDPRESS_EMAIL=rachid.amhouch@gmail.com
 WORDPRESS_TITLE=Rachid Amhouch
 FTPUSER=ramhouch
-FTPPASS=ramhouchscript.sh
+FTPPASS=ramhouch
