--- a/srcs/requirements/bonus/adminer/Dockerfile
+++ b/srcs/requirements/bonus/adminer/Dockerfile
@@ -4,5 +4,5 @@ RUN apt-get update && apt install -y wget php php-mysql && rm -rf /var/lib/apt/l
 
 RUN wget https://www.adminer.org/latest.php -O index.php
 
-CMD ["php", "-S", "0.0.0.0:5000", "-t", "/"]
+CMD ["php", "-S", "0.0.0.0:5000"]
 
